# DFU-UTIL-MODIFY

./: CMakeLists.txt
src/: dfu.c  dfu.h  dfu_file.c  dfu_file.h  dfu_load.c  dfu_util.c  dfu_util.h  dfuse.c  dfuse.h  dfuse_mem.c  main.c  patch.h  portable.h  proto_data_unit.cc  proto_data_unit.h  quirks.c  quirks.h  tcp_cli.cc  tcp_cli.h  usb_dfu.h
